# Financial-Transactions-ETL-Pipeline

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
sql/: analytics_queries.sql  schema.sql
src/pipeline/: etl.py  validators.py
src/web/backend/: main.py
src/web/frontend/: app.py
