[project]
name = "fin-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "requests>=2.31.0",
    "plotly>=5.0.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
